<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.broadripplemassagepracticeapp.MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:scaleType="centerCrop"
        android:src="@drawable/calm_relaxation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/buddha"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:src="@drawable/buddha_cropped" />

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/darkGray" />

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/website"
            android:textAlignment="center"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/darkGray" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/aboutbrmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/company_description"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:drawableLeft="@drawable/ic_place_black_18dp"
                android:drawablePadding="8dp"
                android:text="@string/address"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:drawableLeft="@drawable/ic_local_phone_black_18dp"
                android:drawablePadding="8dp"
                android:text="@string/phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/hours"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>